# self-healing-data-pipeline-on-gcp-ezhgxh

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml
src/backend/: .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  app.py  config.py  constants.py  docker-compose.yml  logging_config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.py  tsconfig.json  wsgi.py
src/backend/airflow/: __init__.py
src/backend/airflow/config/: __init__.py  connections.json  pool_config.json  variables.json
src/backend/airflow/dags/: __init__.py  api_ingestion_dag.py  cloudsql_ingestion_dag.py  data_processing_dag.py  gcs_ingestion_dag.py  monitoring_dag.py  optimization_dag.py  quality_validation_dag.py  self_healing_dag.py
src/backend/airflow/plugins/: __init__.py
src/backend/api/: __init__.py  app.py
src/backend/api/controllers/: __init__.py  admin_controller.py  healing_controller.py  ingestion_controller.py  monitoring_controller.py  optimization_controller.py  quality_controller.py
src/backend/api/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  error_middleware.py  logging_middleware.py
src/backend/api/models/: __init__.py  data_models.py  error_models.py  request_models.py  response_models.py
src/backend/api/routes/: __init__.py  admin_routes.py  healing_routes.py  ingestion_routes.py  monitoring_routes.py  optimization_routes.py  quality_routes.py
src/backend/api/services/: __init__.py  admin_service.py  healing_service.py  ingestion_service.py  monitoring_service.py  quality_service.py
src/backend/api/utils/: __init__.py  auth_utils.py  pagination_utils.py  response_utils.py  validation_utils.py
src/backend/configs/: alert_rules.yaml  bigquery_optimizations.yaml  default_config.yaml  dev_config.yaml  healing_rules.yaml  logging_config.yaml  monitoring_config.yaml  pipeline_definitions.yaml  prod_config.yaml  quality_rules.yaml  source_connections.yaml  staging_config.yaml
src/backend/db/: __init__.py
src/backend/db/migrations/: __init__.py  initial_migration.py  schema.py  seed_data.py
src/backend/db/models/: __init__.py  alert.py  healing_action.py  healing_execution.py  issue_pattern.py  pipeline_definition.py  pipeline_execution.py  pipeline_metric.py  quality_rule.py  quality_validation.py  source_system.py  task_execution.py
src/backend/db/repositories/: __init__.py  alert_repository.py  execution_repository.py  healing_repository.py  metrics_repository.py  pipeline_repository.py  quality_repository.py  source_repository.py
src/backend/db/schema/: __init__.py  bigquery_schema.py  firestore_schema.py
src/backend/ingestion/: __init__.py
src/backend/ingestion/connectors/: __init__.py  api_connector.py  base_connector.py  cloudsql_connector.py  custom_connector.py  gcs_connector.py
src/backend/ingestion/errors/: error_classifier.py  error_handler.py  retry_manager.py
src/backend/ingestion/extractors/: __init__.py  api_extractor.py  batch_extractor.py  file_extractor.py  incremental_extractor.py
src/backend/ingestion/metadata/: __init__.py  lineage_tracker.py  metadata_tracker.py  schema_registry.py
src/backend/ingestion/orchestration/: __init__.py  dependency_manager.py  extraction_orchestrator.py
src/backend/ingestion/staging/: __init__.py  data_normalizer.py  staging_manager.py  storage_service.py
src/backend/monitoring/: __init__.py
src/backend/monitoring/alerting/: __init__.py  alert_generator.py  escalation_manager.py  notification_router.py  rule_engine.py
src/backend/monitoring/analyzers/: __init__.py  alert_correlator.py
src/backend/monitoring/collectors/: __init__.py  event_capture.py  log_ingestion.py  state_tracker.py
src/backend/monitoring/integrations/: __init__.py  email_notifier.py  logs_analyzer.py  teams_notifier.py
src/backend/monitoring/visualization/: __init__.py  diagnostic_tools.py  historical_analysis.py  report_generator.py
src/backend/optimization/: __init__.py
src/backend/optimization/implementation/: __init__.py  auto_implementer.py  change_tracker.py  effectiveness_monitor.py  implementation_guide.py
src/backend/optimization/query/: __init__.py  pattern_identifier.py  query_analyzer.py  (+2 more)
src/backend/quality/: __init__.py
src/backend/scripts/: backup.sh  deploy.sh  init_composer.sh  lint.sh  migrate_db.sh  setup.sh  start.sh  user_setup.sh
src/backend/self_healing/: __init__.py
src/backend/terraform/: bigquery.tf  composer.tf  functions.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  provider.tf  security.tf  storage.tf  variables.tf  vertex.tf
src/backend/utils/: __init__.py
src/test/: .env.example  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  conftest.py  docker-compose.test.yml  jest.config.ts  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  tsconfig.json
src/test/e2e/: README.md  cypress.json  playwright.config.ts
src/test/environments/: README.md
src/test/fixtures/: README.md
src/test/integration/: README.md  conftest.py
src/test/mock_data/: README.md
src/test/performance/: README.md
src/test/scenarios/: README.md  data_ingestion_scenarios.py  data_quality_scenarios.py  end_to_end_scenarios.py
src/test/scripts/: ci_test_runner.py  generate_test_data.sh  generate_test_report.py  run_all_tests.sh  run_e2e_tests.sh  run_integration_tests.sh  run_unit_tests.sh  setup_test_env.sh  teardown_test_env.sh
src/test/testcase_generators/: README.md  healing_testcase_generator.py  ingestion_testcase_generator.py  monitoring_testcase_generator.py  optimization_testcase_generator.py  quality_testcase_generator.py  schema_data_generator.py
src/test/unit/: README.md  conftest.py
src/test/utils/: README.md  airflow_test_utils.py  api_test_utils.py  bigquery_test_utils.py  gcp_test_utils.py  mock_services.py  mocks.py  test_assertions.py  test_cleanup.py  test_helpers.py  web_test_utils.ts
(+586 files in other folders)
